@@ -151,6 +151,8 @@ DysectErrorCode BE::handleAll() {
 
   count1 = getPendingExternalAction();
   if (ProcControlAPI::Process::handleEvents(false)) {
+    // if was library event, then need to enable any pending probe roots outside of callback
+    Backend::enablePending();
     count2 = getPendingExternalAction();
     DYSECTVERBOSE(true, "Event handled... %d %d", count1, count2);
     if (count2 > count1 && count2 != 0) {
