@@ -1,3 +1,6 @@
+2015-07-02 Gregory L. Lee <lee218@llnl.gov>
+	* : Fixes for probes pending library load
+
 2015-07-01 Gregory L. Lee <lee218@llnl.gov>
 	* STAT_FrontEnd : FGFS recv only on expected streams, not all streams
 
